--- a/package.json
+++ b/package.json
@@ -1,28 +1,82 @@
-{
-    "name": "kalkulator_tlumaczen",
+Skip to content
+This repository
+Search
+Pull requests
+Issues
+Marketplace
+Explore
+@MarcinOstaszewski
+Sign out
+Watch 1
+Star 0 Fork 0 agatablue / ToDo - React
+Code Issues 0 Pull requests 0 Projects 0 Wiki Insights
+Branch: master Find file Copy pathToDo - React / package.json
+950647 b 5 hours ago
+@agatablue agatablue add images in React
+1 contributor
+RawBlameHistory
+54 lines(53 sloc) 1.55 KB {
+    "name": "todo",
     "version": "1.0.0",
-    "description": "react webpage for a translation bureau",
-    "main": "webpack.config.js",
+    "description": "",
+    "main": "index.js",
     "scripts": {
+        "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --port 3002 --hot --inline",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "wp": "webpack",
-        "serv": "./node_modules/.bin/webpack-dev-server --hot"
+        "bundle": "./node_modules/.bin/webpack --config webpack.config.js"
     },
-    "author": "MarcinOstaszewski",
-    "license": "MIT",
-    "dependencies": {
-        "react": "^15.4.0",
-        "react-dom": "^15.4.0",
-        "react-router": "^3.0.3",
-        "whatwg-fetch": "^2.0.3"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/agatablue/ToDo-React.git"
     },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/agatablue/ToDo-React/issues"
+    },
+    "homepage": "https://github.com/agatablue/ToDo-React#readme",
     "devDependencies": {
+        "autoprefixer": "^7.1.6",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
+        "css-loader": "^0.28.7",
+        "es6-promise": "^4.1.1",
+        "file-loader": "^1.1.5",
+        "gulp": "^3.9.1",
+        "gulp-sass": "^3.1.0",
+        "gulp-sourcemaps": "^2.6.1",
+        "node-sass": "^4.5.3",
+        "postcss-loader": "^2.0.8",
+        "resolve-url-loader": "^2.2.0",
+        "sass-loader": "^6.0.6",
+        "style-loader": "^0.19.0",
+        "stylelint-config-standard": "^17.0.0",
+        "stylelint-selector-bem-pattern": "^2.0.0",
+        "stylelint-webpack-plugin": "^0.9.0",
+        "svg-inline-loader": "^0.8.0",
+        "url-loader": "^0.6.2",
         "webpack": "^3.8.1",
-        "webpack-dev-server": "^2.9.4"
+        "webpack-dev-server": "^2.9.3"
+    },
+    "dependencies": {
+        "extract-text-webpack-plugin": "^3.0.2",
+        "react": "^15.4.0",
+        "react-dom": "^15.4.0",
+        "react-router": "^3.0.3"
     }
-}
+}©
+2017 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+API
+Training
+Shop
+Blog
+About
