--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "es6-promise": "^4.1.1",
+    "eslint": "^4.12.1",
+    "eslint-plugin-react": "^7.5.1",
     "file-loader": "^1.1.5",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
@@ -48,6 +50,6 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
-    "react-router": "^3.0.3",
+    "react-router": "^3.0.3"
   }
 }
