--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo",
+  "name": "Kalkulator tlumaczen",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,46 +10,46 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agatablue/ToDo-React.git"
+    "url": "git+https://github.com/MarcinOstaszewski/Kalkulator_tlumaczen.git"
   },
-  "author": "",
+  "author": "MarcinOstaszewski",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/agatablue/ToDo-React/issues"
+    "url": "https://github.com/MarcinOstaszewski/Kalkulator_tlumaczen/issues"
   },
-  "homepage": "https://github.com/agatablue/ToDo-React#readme",
+  "homepage": "https://github.com/MarcinOstaszewski/Kalkulator_tlumaczen#readme",
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^8.0.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^1.0.0",
     "es6-promise": "^4.1.1",
-    "eslint": "^4.12.1",
+    "eslint": "^5.6.1",
     "eslint-plugin-react": "^7.5.1",
-    "file-loader": "^1.1.5",
+    "file-loader": "^2.0.0",
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.1",
     "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.8",
-    "resolve-url-loader": "^2.2.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "stylelint-config-standard": "^17.0.0",
+    "postcss-loader": "^3.0.0",
+    "resolve-url-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "stylelint-config-standard": "^18.2.0",
     "stylelint-selector-bem-pattern": "^2.0.0",
-    "stylelint-webpack-plugin": "^0.9.0",
+    "stylelint-webpack-plugin": "^0.10.5",
     "svg-inline-loader": "^0.8.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
+    "url-loader": "^1.1.1",
+    "webpack": "^4.20.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
-    "react": "^15.4.0",
-    "react-dom": "^15.4.0",
-    "react-router": "^3.0.3"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router": "^4.3.1"
   }
 }
