--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Kalkulator tlumaczen",
+  "name": "KalkulatorTlumaczen",
   "version": "1.0.0",
-  "description": "",
+  "description": "Calculates and instantly presents the price of the translation service - based on the length of the text, chosen language, direction of translation and some additional options",
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --port 3002 --hot --inline",
@@ -30,7 +30,7 @@
     "eslint": "^5.6.1",
     "eslint-plugin-react": "^7.5.1",
     "file-loader": "^2.0.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.1",
     "node-sass": "^4.5.3",
@@ -43,13 +43,18 @@
     "stylelint-webpack-plugin": "^0.10.5",
     "svg-inline-loader": "^0.8.0",
     "url-loader": "^1.1.1",
-    "webpack": "^4.20.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack": "^3.12.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "ajv": "^6.5.4",
     "extract-text-webpack-plugin": "^3.0.2",
-    "react": "^16.5.2",
+    "npm-merge-driver": "^2.3.5",
+    "postcss-sass": "^0.3.3",
+    "react": "^15.6.2",
     "react-dom": "^16.5.2",
-    "react-router": "^4.3.1"
+    "react-router": "^4.3.1",
+    "stylelint": "^10.1.0"
   }
 }
